--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Valencia}&subid2={subid2}&clickid={clickid}" class="step-btn">
             JAG ACCEPTERAR OCH JAG VILL SE KATALOGEN
           </a>
-        </div>stronger115
+        </div>
       </div>
     </div>
   </div>
